# SLAY

dz1/: CMakeLists.txt
dz1/src/: BICGvsCGS.cpp  CMakeLists.txt  QR.h  SpeedTests.cpp  bicg.h  cg.h  cgs.h  csr_matrix.h  eleptic_matrix_generator.h  math_matrix.h  matrix.h  solver.h  sor.h  ssor.h  steepest_gradient.h  сhebyshev_symmetric.h
dz1/test/: CMakeLists.txt  test.cpp
